[gd_scene load_steps=7 format=3 uid="uid://ds1u6gy6s14vi"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_m027k"]
[ext_resource type="AudioStream" uid="uid://uv8k7f5uo4kn" path="res://Audio/SFX/Menu/BreadGame Menu hover v.1.wav" id="3_ofnbh"]
[ext_resource type="AudioStream" uid="uid://darp0oxy302a5" path="res://Audio/SFX/Menu/BreadGame Menu click A v.1.wav" id="4_f1hdp"]
[ext_resource type="Texture2D" uid="uid://bidss1xvuc3qo" path="res://Art/bread.png" id="5_l6hgp"]
[ext_resource type="AudioStream" uid="uid://plbw2e6ykpvl" path="res://Audio/Music/BreadGame MenuMusic MASTER v.1.mp3" id="5_nsani"]

[sub_resource type="GDScript" id="GDScript_dypuu"]
script/source = "extends Button


"

[node name="Main Menu" type="Node2D"]
script = ExtResource("1_m027k")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Main Menu Panel" type="Panel" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Play Button" type="Button" parent="CanvasLayer/Main Menu Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0347222
anchor_top = 0.296296
anchor_right = 0.251736
anchor_bottom = 0.450617
theme_override_font_sizes/font_size = 65
text = "PLAY"
script = SubResource("GDScript_dypuu")
metadata/_edit_use_anchors_ = true

[node name="Settings Button" type="Button" parent="CanvasLayer/Main Menu Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0347222
anchor_top = 0.475308
anchor_right = 0.230035
anchor_bottom = 0.614198
theme_override_font_sizes/font_size = 40
text = "SETTINGS"
script = SubResource("GDScript_dypuu")
metadata/_edit_use_anchors_ = true

[node name="Credits Button" type="Button" parent="CanvasLayer/Main Menu Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0347222
anchor_top = 0.638889
anchor_right = 0.230035
anchor_bottom = 0.777778
theme_override_font_sizes/font_size = 40
text = "CREDITS"
script = SubResource("GDScript_dypuu")
metadata/_edit_use_anchors_ = true

[node name="Quit Button" type="Button" parent="CanvasLayer/Main Menu Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0347222
anchor_top = 0.802469
anchor_right = 0.230035
anchor_bottom = 0.941358
theme_override_font_sizes/font_size = 40
text = "QUIT"
script = SubResource("GDScript_dypuu")
metadata/_edit_use_anchors_ = true

[node name="Title text" type="RichTextLabel" parent="CanvasLayer/Main Menu Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0347222
anchor_top = 0.0246914
anchor_right = 0.94184
anchor_bottom = 0.271605
grow_horizontal = 2
theme_override_font_sizes/normal_font_size = 110
text = "Bready, Set, Dough!"
metadata/_edit_use_anchors_ = true

[node name="ButtonHover" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_ofnbh")

[node name="ButtonClick" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_f1hdp")

[node name="Menu Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_nsani")
autoplay = true

[node name="Background" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.25098)
z_index = -5
position = Vector2(1349, 864)
scale = Vector2(1.46734, 1.46734)
texture = ExtResource("5_l6hgp")

[connection signal="mouse_entered" from="CanvasLayer/Main Menu Panel/Play Button" to="." method="_on_play_button_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/Main Menu Panel/Play Button" to="." method="_on_play_button_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/Main Menu Panel/Settings Button" to="." method="_on_settings_button_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/Main Menu Panel/Settings Button" to="." method="_on_settings_button_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/Main Menu Panel/Credits Button" to="." method="_on_credits_button_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/Main Menu Panel/Credits Button" to="." method="_on_credits_button_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/Main Menu Panel/Quit Button" to="." method="_on_quit_button_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/Main Menu Panel/Quit Button" to="." method="_on_quit_button_pressed"]
